<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
<!--
    <item
        android:id="@+id/nav_sort"
        android:icon="@drawable/ic_label"
        android:title="分类"
        >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_sort_default"
                    android:title="全部"/>
            </group>
        </menu>
    </item>
    -->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/navMenu_list"/>
    <item
    android:id="@+id/nav_scan"
    android:icon="@drawable/ic_scan"
    android:title="@string/navMenu_scan"/>
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/navMenu_setting"/>

    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/navMenu_help"/>
    </group>
</menu>