<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        style="@style/Toolbar"
        app:title=""
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <ImageView
                android:id="@+id/settings_back"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back"
                android:scaleType="centerInside" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:text="@string/settingActivity_title" />
        </RelativeLayout>



    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/settings_security"
        style="@style/SettingsRelativeLayout">
        <TextView
            style="@style/SettingsTextView"
            android:text="@string/settingActivity_op1" />
        <ImageView
            style="@style/SettingsImageView"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/settings_theme"
        style="@style/SettingsRelativeLayout">
        <TextView
            style="@style/SettingsTextView"
            android:text="@string/settingActivity_op2" />
        <Switch
            android:id="@+id/settings_darkTheme_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/settings_backup"
        style="@style/SettingsRelativeLayout">
        <TextView
            style="@style/SettingsTextView"
            android:text="@string/settingActivity_op3" />
        <ImageView
            style="@style/SettingsImageView"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/settings_about"
        style="@style/SettingsRelativeLayout">
        <TextView
            style="@style/SettingsTextView"
            android:text="@string/settingActivity_op4" />
        <ImageView
            style="@style/SettingsImageView"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
        <RelativeLayout
            android:id="@+id/settings_lab"
            android:layout_marginTop="10dp"
            style="@style/SettingsRelativeLayout">
            <TextView
                style="@style/SettingsTextView"
                android:text="@string/settingActivity_laboratory" />
            <ImageView
                style="@style/SettingsImageView"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
