<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cannot_add_dialog_bg">
    <!--对话框标题区域-->
    <RelativeLayout
        android:id="@+id/select_file_format_dialog"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/select_file_format_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectFileFormatDialog_title"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:textSize="16sp"
                android:textColor="@color/textColor"/>

            <RadioGroup
                android:id="@+id/select_file_format_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp">

                <RadioButton
                    android:id="@+id/select_file_format_button_ks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:textColor="@color/textColor"
                    android:text="@string/selectFileFormatDialog_op1" />
                <RadioButton
                    android:id="@+id/select_file_format_button_ksp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="18dp"
                    android:text="@string/selectFileFormatDialog_op2"/>
                <RadioButton
                    android:id="@+id/select_file_format_button_xslx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="@string/selectFileFormatDialog_op3"/>
            </RadioGroup>

        </LinearLayout>


    </RelativeLayout>
<!--分割线-->
    <View
        android:id="@+id/select_file_format_split_line"
        android:layout_width="280dp"
        android:layout_height="0.5dp"
        android:layout_below="@id/select_file_format_dialog"
        android:background="@color/swipeLine"/>

    <!--对话框按钮-->
    <LinearLayout
        android:id="@+id/select_file_format_button"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_file_format_split_line"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!--取消按钮-->
        <Button
            android:id="@+id/select_file_format_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_click_select_file_format_cancel"
            android:text="@string/selectFileFormatDialog_cancelBtn"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"/>
        <!--分割线-->
        <View
            android:id="@+id/select_file_format_split_line2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:background="@color/swipeLine"/>
        <!--确认按钮-->
        <Button
            android:id="@+id/select_file_format_OK_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_click_select_file_format_ok"
            android:text="@string/selectFileFormatDialog_commitBtn"
            android:textColor="#6699ff"
            android:textSize="16sp"/>

    </LinearLayout>

</RelativeLayout>